--- a/style.css
+++ b/style.css
@@ -576,12 +576,22 @@ details>ul {
   width: 95%;
   font-size: 1rem;
   line-height: 1.4;
+  font-weight: var(--font-weight-400);
+  color: var(--text-color-h1-2);
 }
-
-.lista-sumario ul li p {
-  margin: 1rem 0;
+.lista-sumario h3 {
+  font-size: 1.1rem;
   font-weight: var(--font-weight-700);
-  font-size: 1.3rem;
+  margin-bottom: .5rem;
+
+}
+.lista-sumario p, .lista-sumario span {
+  margin: 1rem 0;
+  color: var(--text-color-h1-2);
+  font-size: 1.2rem;
+  font-weight: var(--font-weight-700);
+  text-align: left;
+
 }
 
 footer {
